Fix navbar logo being squished

--- a/appsor-frontend/src/assets/stylesheets/App.css
+++ b/appsor-frontend/src/assets/stylesheets/App.css
@@ -54,12 +54,12 @@ body {
     color: #f1f1f1 !important;
 }
 
-.ui.visible.sidebar {
-    width: 50% !important;
+.navbar-logo-mobile {
+    margin: 20px auto;
 }
 
-.ui.mini.image {
-    margin: 20px auto;
+.ui.visible.sidebar {
+    width: 50% !important;
 }
 
 @media only screen and (max-width: 900px) {
